--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 {
-  "buildCommand": "prisma generate && next build",
-  "devCommand": "next dev",
+  "buildCommand": "bun run build",
+  "devCommand": "bun run dev",
   "installCommand": "bun install",
   "framework": "nextjs",
-  "outputDirectory": ".next",
-  "regions": ["fra1"],
   "env": {
     "DATABASE_URL": "@database-url"
-  },
-  "build": {
-    "env": {
-      "DATABASE_URL": "@database-url"
-    }
   }
 }
